src/parse/snapshots/dilaria__parse__test__expr__add_multiply.snap
---
source: src/parse/test.rs
assertion_line: 298
expression: ast

---
BinaryOp(
    BinaryOp {
        span: Span {
            start: 0,
            end: 0,
        },
        lhs: Literal(
            Number(
                10.0,
                Span {
                    start: 0,
                    end: 0,
                },
            ),
        ),
        rhs: BinaryOp(
            BinaryOp {
                span: Span {
                    start: 0,
                    end: 0,
                },
                lhs: Literal(
                    Number(
                        20.0,
                        Span {
                            start: 0,
                            end: 0,
                        },
                    ),
                ),
                rhs: Literal(
                    Number(
                        100.0,
                        Span {
                            start: 0,
                            end: 0,
                        },
                    ),
                ),
                kind: Mul,
            },
        ),
        kind: Add,
    },
)
