src/parse/snapshots/dilaria__parse__test__expr__equal_unary.snap
---
source: src/parse/test.rs
assertion_line: 307
expression: ast

---
BinaryOp(
    BinaryOp {
        span: Span {
            start: 0,
            end: 0,
        },
        lhs: Literal(
            Number(
                10.0,
                Span {
                    start: 0,
                    end: 0,
                },
            ),
        ),
        rhs: UnaryOp(
            UnaryOp {
                span: Span {
                    start: 0,
                    end: 0,
                },
                expr: Literal(
                    Number(
                        10.0,
                        Span {
                            start: 0,
                            end: 0,
                        },
                    ),
                ),
                kind: Neg,
            },
        ),
        kind: Equal,
    },
)
